--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
-
-spring.datasource.generate-unique-name=false
 spring.datasource.name=runnerz
+#spring.datasource.generate-unique-name=false
+spring.datasource.url=jdbc:postgresql://localhost:8080/runnerz
+spring.datasource.username=
+spring.datasource.password=
+
+spring.sql.init.mode=always
