doing jdbc sql call with all method we had before to the local database

--- a/compose.yml
+++ b/compose.yml
@@ -4,6 +4,6 @@ services:
     environment:
       - 'POSTGRES_DB=runnerz'
       - 'POSTGRES_PASSWORD=password'
-      - 'POSTGRES_USER=dan'
+      - 'POSTGRES_USER=ivanberrutto'
     ports:
       - '5432:5432'
