fix connection to postgreSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.name=runnerz
+#spring.datasource.name=runnerz
 #spring.datasource.generate-unique-name=false
-spring.datasource.url=jdbc:postgresql://localhost:8080/runnerz
-spring.datasource.username=
-spring.datasource.password=
+#spring.datasource.url=jdbc:postgresql://localhost:8080/runnerz
+#spring.datasource.username=ivanberrutto
+#spring.datasource.password=password
 
 spring.sql.init.mode=always
